<resources>
    <string name="app_name">Rutgers Cafe</string>
    <string name="title_text">Rutgers Cafe</string>
    <string name="mm">Main Menu</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="order_details">Order Details</string>
    <string name="store_orders">Store Orders</string>
    <string name="size">Size:</string>
    <string name="customize">Customize:</string>
    <string name="cream">Cream</string>
    <string name="syrup">Syrup</string>
    <string name="milk">Milk</string>
    <string name="caramel">Caramel</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="qty">Qty:</string>
    <string name="_0_00">$0.00</string>
    <string name="sub_total">Sub-Total:</string>
    <string name="add_to_order">Add to Order</string>
    <string name="tap_back">Tap back when done</string>
    <string name="flavor">Flavor:</string>
    <string name="enter_a_num">Please Enter a Number.</string>
    <string name="your_order">Your order</string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="order_total">Order Total:</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="remove">Remove Item</string>
    <string name="orderN">Order #:</string>
    <string name="place_order_now">Place Order Now</string>

    <string name="no_order_selected">No order is selected.</string>
    <string name="no_more_orders">There are no more orders!</string>
    <string name="order_cancelled">Order was cancelled.</string>

    <string name="nothing_selected_cart">No Items are Selected. Tap an order item to select.</string>
    <string name="removed_done">Item was Removed.</string>
    <string name="order_placed">Your order has been placed.</string>
    <string name="order_empty">Your order is now empty!</string>

    <string-array name="sizes">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>

    <string-array name="flavors">
        <item>Chocolate Frosted</item>
        <item>Glazed</item>
        <item>Maple Syrup Frosted</item>
        <item>Blueberry</item>
        <item>Strawberry</item>
        <item>Plain</item>
        <item>Boston Cream</item>
        <item>Jelly</item>
        <item>Sugar</item>
        <item>Double Chocolate</item>
    </string-array>

</resources>