<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderCoffee">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="144dp"
        android:layout_height="51dp"
        android:layout_marginTop="712dp"
        android:labelFor="@id/total"
        android:text="@string/tap_back"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="548dp"
        android:labelFor="@id/total"
        android:text="@string/sub_total"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="472dp"
        android:labelFor="@id/quantity"
        android:text="@string/qty"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/whpcrmCB"
        android:layout_width="176dp"
        android:layout_height="44dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="368dp"
        android:text="@string/whipped_cream"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/caramelCB"
        android:layout_width="104dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="368dp"
        android:text="@string/caramel"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/milkCB"
        android:layout_width="86dp"
        android:layout_height="47dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="308dp"
        android:text="@string/milk"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/syrupCB"
        android:layout_width="86dp"
        android:layout_height="47dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="308dp"
        android:text="@string/syrup"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:text="@string/customize"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/size"
        android:layout_width="154dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:labelFor="@id/size"
        android:text="@string/size"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="196dp"
        android:layout_height="119dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffefee" />

    <CheckBox
        android:id="@+id/creamCB"
        android:layout_width="86dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="308dp"
        android:text="@string/cream"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="460dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/total"
        android:layout_width="96dp"
        android:layout_height="41dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="540dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:inputType="text"
        android:text="@string/_0_00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addToOrder"
        android:layout_width="158dp"
        android:layout_height="64dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="700dp"
        android:text="@string/add_to_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>