<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="138dp"
        android:layout_height="104dp"
        android:layout_marginBottom="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/clipboard" />

    <Button
        android:id="@+id/storeOrders"
        android:layout_width="157dp"
        android:layout_height="63dp"
        android:layout_marginStart="224dp"
        android:layout_marginBottom="96dp"
        android:text="@string/store_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="138dp"
        android:layout_height="104dp"
        android:layout_marginBottom="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/shopping_cart" />

    <Button
        android:id="@+id/orderDeets"
        android:layout_width="157dp"
        android:layout_height="63dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="100dp"
        android:text="@string/order_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="138dp"
        android:layout_height="104dp"
        android:layout_marginBottom="360dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/donutsust" />

    <Button
        android:id="@+id/orderDonuts"
        android:layout_width="157dp"
        android:layout_height="63dp"
        android:layout_marginStart="228dp"
        android:layout_marginBottom="296dp"
        android:text="@string/order_donuts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/java_icon"
        android:layout_width="120dp"
        android:layout_height="86dp"
        android:layout_marginTop="53dp"
        app:layout_constraintEnd_toStartOf="@+id/title_label"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/java_icon" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:fontFamily="cursive"
        android:text="@string/title_text"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/orderCoff"
        android:layout_width="157dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="296dp"
        android:text="@string/order_coffee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="154dp"
        android:layout_height="99dp"
        android:layout_marginBottom="360dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/coffefee" />

</androidx.constraintlayout.widget.ConstraintLayout>